// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList ButtonList should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <FlatList
      data={
        Array [
          Object {
            "external": 0,
            "target": "",
            "text": "girl",
            "title": "girl",
            "url": "/c/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "toddler girl",
            "title": "toddler girl",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "boy",
            "title": "boy",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "toddler boy",
            "title": "toddler boy",
            "url": "/c/",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={2}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <Styled(CustomButton)
      accessibilityLabel="baby"
      accessibilityRole="button"
      buttonVariation="cautionary-button"
      color="red"
      customStyle={Object {}}
      disableButton={false}
      fullWidth=""
      style={
        Object {
          "width": 750,
        }
      }
      text="baby"
      url="/c/"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 2`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "external": 0,
          "target": "",
          "text": "TODDLER GIRL",
          "title": "",
          "url": "/p/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "GIRL",
          "title": "",
          "url": "/p/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "TODDLER BOY",
          "title": "",
          "url": "/c/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "BOY",
          "title": "",
          "url": "/c/",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 3`] = `
<Styled(View)>
  <Styled(View)>
    <FlatList
      data={
        Array [
          Object {
            "external": 0,
            "target": "",
            "text": "TODDLER GIRL",
            "title": "",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "GIRL",
            "title": "",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "TODDLER BOY",
            "title": "",
            "url": "/c/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "BOY",
            "title": "",
            "url": "/c/",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 4`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "image": Object {
            "alt": "",
            "title": "",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/w_76/v156206en-white-4K2lIP0zc_k-unsplash_avr2bp.jpg",
          },
          "link": Object {
            "external": 0,
            "target": "_self",
            "text": "Girl",
            "title": "",
            "url": "/p/",
          },
        },
        Object {
          "image": Object {
            "alt": "",
            "title": "",
            "url": "https://res.cloudinary.com/tcp-dam-test/id/w_76/v1562061640/ben-white-4K2lIP0zc_k-unsplash_avr2bp.jpg",
          },
          "link": Object {
            "external": 0,
            "target": "_self",
            "text": "Boy",
            "title": "",
            "url": "/c/",
          },
        },
        Object {
          "image": Object {
            "alt": "",
            "title": "",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/w61640/ben-white-4K2lIP0zc_k-unsplash_avr2bp.jpg",
          },
          "link": Object {
            "external": 0,
            "target": "_self",
            "text": "Toddler Boy",
            "title": "",
            "url": "/c/",
          },
        },
        Object {
          "image": Object {
            "alt": "",
            "title": "",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/w_76/v1562061640/ben-white-4K2lIP0zc_k-unsplash_avr2bp.jpg",
          },
          "link": Object {
            "external": 0,
            "target": "_self",
            "text": "Toddler",
            "title": "",
            "url": "/p/",
          },
        },
        Object {
          "image": Object {
            "alt": "",
            "title": "",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/w_76/v1562061640/ben-white-4K2lIP0zc_k-unsplash_avr2bp.jpg",
          },
          "link": Object {
            "external": 0,
            "target": "_self",
            "text": "Baby",
            "title": "",
            "url": "/c/",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;
